--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "compass": "^0.1.1",
     "debug": "2.1.3",
     "express": "4.12.3",
